@@ -1,3 +1,11 @@
+2004-06-09  Stefan Jahn  <stefan@lkcc.org>
+
+	* diode.cpp (Diode): Added 'Rs' and 'Tt' to diode parameters.
+	Changed some parameter names as done in the simulator.
+
+	* component.cpp (getComponentFromName): Made JFET component
+	loadable.
+
 2004-05-02  Stefan Jahn  <stefan@lkcc.org>
 
 	* diode.cpp (Diode): Added more properties to the diode
